# muFFT

./: .gitignore  CHANGELOG.md  CLAUDE.md  CodingConvention.html  CplusplusAPI.html  GettingStarted.html  Python.html  README.md  Summary.html  genindex.html  index.html  install.sh  install_dependencies.sh  meson.build  meson.options  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: documentation.yml  tests.yml  ubuntu.yml  wheels.yml
_sources/: GettingStarted.rst.txt  Python.rst.txt  index.rst.txt
_static/: documentation_options.js
doc/: Doxyfile
doc/source/: GettingStarted.rst  Python.rst  Summary.rst  conf.py
examples/: convenience_interface.py  discrete_derivative.py  example.nc  fourier_derivative.py  gradient.py  meson.build  parallel.py  transform.py
language_bindings/python/: bind_py_common_mufft.cc  bind_py_derivatives.cc  bind_py_fftengine.cc  meson.build
language_bindings/python/muFFT/: __init__.py  meson.build
src/: fftw_engine.hh  meson.build  pocketfft_engine.cc
src/libmufft/: derivative.cc  derivative.hh  fft_engine_base.cc  fft_engine_base.hh  fft_utils.hh  fftw_engine.cc  fftw_engine.hh  fftwmpi_engine.cc  fftwmpi_engine.hh  meson.build  mufft_common.hh  pfft_engine.cc  pfft_engine.hh  pocketfft_engine.cc  pocketfft_engine.hh  version.cc
subprojects/: mugrid.wrap
subprojects/pocketfft/: meson.build
tests/: meson.build  mpi_context.hh  mpi_test_fft_engine.cc  python_binding_tests.py  python_derivative_tests.py  python_fft_tests.py  python_mpi_binding_tests.py  python_mpi_ghost_tests.py  python_netcdf_tests.py  test_serial_fft_engines.cc  tests.hh
